Fix for Safari on iOS expanding the player iframe

--- a/src/design/design.css
+++ b/src/design/design.css
@@ -3,7 +3,9 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 
 /* ========================= GENERAL TAGS ======================== */
 a img {border:0;}
-html,body {
+html, body, .player-design, #player {
+    /* Make sure that iOS Safari doesn't try to expand the player iframe */
+    position: relative;
     width:100%;
     height:100%;
     background-color: #000000;
